# wasm-bindgen-practice

./: Cargo.toml
src/: canvas.rs  counter.rs  defined_in_js.rs  fm_oscillator.rs  lib.rs  paint.rs  pass_closure.rs  performance.rs  req_frame.rs  wasm_in_wasm.rs  web_gl.rs  webrtc.rs  websocket.rs
www/: chars-list.js  index.html  index.js  package-lock.json  package.json  server.js
