[package]
name = "wasm_full_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


# reduce the size of the wasm
[profile.release]
lto = false

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    "Document",
    'Element',
    'HtmlElement',
    'Node',
    "Window",
    "console",
    "CssStyleDeclaration"
] }
