[package]
name = "wasm_full_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


# reduce the size of the wasm
[profile.release]
lto = false

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
humantime = "2.1.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    "Document",
    'Element',
    'HtmlElement',
    'Node',
    "Window",
    "console",
    #needed for style
    "CssStyleDeclaration",
    #needed for perfomance
    "Performance",
    "PerformanceTiming",
    #needed for fetch
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    #canvas
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    #audio
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    "OscillatorNode",
    "OscillatorType",
    # webgl
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    #websocket
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    #WebRtc
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    #paint mouse event
    "MouseEvent",
    "EventTarget",
    #web worker
    "HtmlInputElement",
    "Worker",
] }
